test_case/rust-lang_rust/53584_414887472_37.rs
\n\nIf the trait `Foo` was deriving from something like `Super<String>` or\n`Super<T>` (where `Foo` itself is `Foo<T>`), this is okay, because given a type\n`get_a()` will definitely return an object of that type.\n\nHowever, if it derives from `Super<Self>`, even though `Super` is object safe,\nthe method `get_a()` r: Bar<'a>, // error: wrong number of lifetime arguments:\n                  //        expected 0, found 1\n}\n